syntax = "proto3";
package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
 // For tests
option (gogoproto.testgen_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;

enum SigAlgo {
  ECDSA       = 0;
  ED25519     = 1;
  VRF         = 2;
}

message SigChainElem {
  bytes addr                = 1;
  bytes next_pubkey         = 2;
  bool mining               = 3;
  SigAlgo sig_algo          = 4;
  bytes signature           = 5;
  bytes proof               = 6;
}

message SigChain {
  uint32 nonce                = 1;
  uint32 data_size            = 2;
  bytes data_hash             = 3;
  bytes block_hash            = 4;
  bytes src_pubkey            = 5;
  bytes dest_pubkey           = 6;
  repeated SigChainElem elems = 7;
}
